objects/SIP__c.object
<CustomObject>
    <fields>
        <fullName>Level_3_Pipeline_Target__c</fullName>
        <description>the level 3 pipeline target in % for FE&apos;s</description>
        <label>Level 3 Pipeline Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_SMI_cal_target__c</fullName>
        <formula>(Prev_Year_Standard_Margin_Dollar__c * Level_3_SMI_target__c) + Prev_Year_Standard_Margin_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 SMI cal target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_SMI_target_Dollar__c</fullName>
        <label>Level 3 SMI target $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_SMI_target__c</fullName>
        <label>Level 3 SMI target %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Load_Status_Direct_Billings__c</fullName>
        <description>Shows the current load status of Direct billings available in salesforce from the Monthly object in Fiscal working days of the year</description>
        <formula>Load_Status_Monthly_Direct__r.Current_Fiscal_Working_Day_in_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the current load status of Direct billings available in salesforce in Fiscal working days of the year</inlineHelpText>
        <label>Load Status Direct Billings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_Status_Monthly_Direct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>a look up to the load status object to reference the monthly direct load status record</description>
        <label>Load Status Monthly  Direct</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Load_Status__c.Name</field>
                <operation>equals</operation>
                <value>BBB_Month_Bill_Book_Cust__c Direct</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Load_Status__c</referenceTo>
        <relationshipLabel>Name</relationshipLabel>
        <relationshipName>SIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Load_Status_POS__c</fullName>
        <description>Shows the current load status of Indirect billings available in salesforce from the Monthly object in Fiscal working days of the year</description>
        <formula>Load_Status_Record_Indirect__r.Current_Fiscal_Working_Day_in_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the current load status of POS data available in salesforce in fiscal working days of the year</inlineHelpText>
        <label>Load Status POS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_Status_Record_Indirect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to the load status obeject to reference the Monthly Indirect record.</description>
        <label>Load Status Record Indirect</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Load_Status__c.Name</field>
                <operation>equals</operation>
                <value>BBB_Month_Bill_Book_Cust__c Indirect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Load_Status__c</referenceTo>
        <relationshipLabel>SIP (Load Status Monthly Indirect)</relationshipLabel>
        <relationshipName>SIP1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <formula>Plan_Participant__r.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to be checked if the plan data is not calculated automatically by jobs in SF (Batch job or Mapping record)   or if the plan is complete manual and not track in SF</description>
        <inlineHelpText>to be checked if the plan data is not calculated automatically by jobs in SF (Batch job or Mapping record)   or if the plan is complete manual and not track in SF</inlineHelpText>
        <label>Manual Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Business_Driver_Payout_Percent__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Business Driver Payout %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Exceptional_Performance_Dollar__c</fullName>
        <formula>SIP_master_record__r.Exceptional_Performance_Payout_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Exceptional Performance k$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_IND_Performance_Payout__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max IND Performance Payout %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Payout_Dollar__c</fullName>
        <formula>SIP_master_record__r.Payout_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Payout k$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Payout_Percent__c</fullName>
        <formula>SIP_master_record__r.Payout_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Payout %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NPS1_Achieved_Weighting__c</fullName>
        <label>NPS1 Achieved Weighting %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NPS3_Achieved_Weighting__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the achieved weighting for the NPS3 results, populated by workflow rule</description>
        <label>NPS3 Achieved Weighting %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NPS3_Result_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>for any NPS3 result adjustments</description>
        <inlineHelpText>NPS3 result adjustments in $, please provide justifications in comments field</inlineHelpText>
        <label>NPS3 Result Adjustment $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Achieved_Weighting__c</fullName>
        <defaultValue>0</defaultValue>
        <description>the achieved weighting of the NPS business driver, populated by workflow rule</description>
        <label>NPS Achieved Weighting %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NPS_Result__c</fullName>
        <defaultValue>0</defaultValue>
        <description>field to populate the NPS results</description>
        <label>NPS Result %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>POS_in_specific_Region_Result__c</fullName>
        <label>POS in specific Region Result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participants_Country_Text__c</fullName>
        <description>Participants Country populated by workflow rule into a text filed to be used in condition based sahring rules</description>
        <label>Participants Country Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants_Country__c</fullName>
        <formula>Plan_Participant__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participants Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants_Manager__c</fullName>
        <formula>Plan_Participant__r.Manager.FirstName &amp; &quot; &quot; &amp;  Plan_Participant__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participants Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants_Region_Text__c</fullName>
        <description>Text field populated by workflow rule with the Region of the Participant. Used for criteria based sharing rules.</description>
        <label>Participants Region Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants_Role__c</fullName>
        <description>defines the role of the plan participant which gets printed on the SIP letter</description>
        <label>Participants Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Field Engineer</fullName>
                </value>
                <value>
                    <fullName>Global Account Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Global Sales Manager</fullName>
                </value>
                <value>
                    <fullName>GM Labels</fullName>
                </value>
                <value>
                    <fullName>Sen. Mgr. Sales Effectiveness</fullName>
                </value>
                <value>
                    <fullName>Regional Product Manager</fullName>
                </value>
                <value>
                    <fullName>Global Product Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Manager Channel</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Field Application Engineer</fullName>
                </value>
                <value>
                    <fullName>Industry Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Distribution Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Sales Operations Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participants_Sub_Vertical__c</fullName>
        <description>Participants subvertical from the user record</description>
        <formula>TEXT( Plan_Participant__r.Sub_Vertical__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participants Sub-Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants_Subvertical_Text__c</fullName>
        <description>shows the participants sub vertical as a text field to be used in criteria based sharing rules</description>
        <label>Participants Subvertical Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants_TE_Network_ID__c</fullName>
        <formula>Plan_Participant__r.Te_Network_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participants TE Network ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule_Text__c</fullName>
        <formula>SIP_master_record__r.Payment_Schedule_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Schedule Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Adjustment_Comment__c</fullName>
        <description>text field to justify pipeline adjustments</description>
        <inlineHelpText>please justify pipeline adjustments</inlineHelpText>
        <label>Pipeline Adjustment Comment</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pipeline_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>a field to adjust pipeline results manually</description>
        <label>Pipeline Adjustment $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Result_Achieved_Weighting__c</fullName>
        <formula>CASE( RecordType.Name ,
&quot;FE Plan&quot;,
IF( Pipeline_Result_Percent__c &lt; Level_1_Pipeline_Target__c , 0,
IF( Pipeline_Result_Percent__c &lt;= Level_2_Pipeline_Target__c ,
(((Pipeline_Result_Percent__c - Level_1_Pipeline_Target__c )/
(Level_2_Pipeline_Target__c - Level_1_Pipeline_Target__c )) * 0.05),
IF(
Pipeline_Result_Percent__c &lt;= Level_3_Pipeline_Target__c ,
((((Pipeline_Result_Percent__c - Level_2_Pipeline_Target__c )/
(Level_3_Pipeline_Target__c - Level_2_Pipeline_Target__c )) * 0.05)+ 0.05), 0.1
))),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Result Achieved Weighting %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pipeline_Result_Percent__c</fullName>
        <description>shows the pipeline result in % compared to last year revenue, populated with workflow rule</description>
        <label>Pipeline Result %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pipeline_Result__c</fullName>
        <description>Shows the current pipeline in $</description>
        <inlineHelpText>Shows the year to date pipeline value in $</inlineHelpText>
        <label>Pipeline Result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Target_Achieved_Weighting__c</fullName>
        <description>weighting of achieved pipeline target.   Populated with a Trigger based on a defined formula.</description>
        <label>Pipeline Target Achieved Weighting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Comments__c</fullName>
        <description>any comments related to the plan important e.g. for approval or clarification</description>
        <label>Plan Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Participant_Email__c</fullName>
        <formula>Plan_Participant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Participant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The TE person who participates in the plan</description>
        <label>Plan Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Participants_First_Name__c</fullName>
        <formula>Plan_Participant__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Participants First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Conversion_Result_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>field to enter a value to adjust conversion results manually</description>
        <label>Conversion Adjustment $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year_GI_Bill_YTD__c</fullName>
        <label>Plan Year GI Bill YTD $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year_GI_Growth__c</fullName>
        <description>populated by workflow rule</description>
        <label>Plan Year GI Result %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Gross_Margin_YTD__c</fullName>
        <label>Plan Year Gross Margin YTD $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Growth_Direct__c</fullName>
        <label>Plan Year Growth Direct %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Growth_POS__c</fullName>
        <label>Plan Year Growth POS %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Growth__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the plan year growth in %, populated by a workflow rule</description>
        <label>Plan Year Growth %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Year_NPS1_Result_Percent__c</fullName>
        <label>Plan Year NPS1 Result %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Year_NPS1_Result__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Plan Year NPS1 Result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year_NPS3_Result_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>NPS3 results of plan year as % of plan year revenue, populated by workflow rule</description>
        <inlineHelpText>NPS3 results of plan year as % of plan year revenue</inlineHelpText>
        <label>Plan Year NPS3 Result %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Year_NPS3_Result__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the $ results of NPS3 revenue for the plan year</description>
        <label>Plan Year NPS3 Result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Revenue_Adjustment_Comment__c</fullName>
        <description>text comment for revenue adjustment, required field if revenus adjustment is not 0</description>
        <inlineHelpText>provide a reason for revenue adjustment, if required add additional documents to the attachments</inlineHelpText>
        <label>Revenue Adjustment Comment</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Revenue_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>a field for management to adjust revenues of the plan year because of  approved reasons</description>
        <inlineHelpText>adjustment of plan year  revenue to be apporved by management</inlineHelpText>
        <label>Revenue Adjustment $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year_SMI_Growth__c</fullName>
        <label>Plan Year SMI Growth %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Standard_Margin_YTD_Dollar__c</fullName>
        <label>Plan Year Standard Margin YTD $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Standard_Margin_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>populated by report API</description>
        <inlineHelpText>standard margin year to date for plan</inlineHelpText>
        <label>Plan Year Standard Margin YTD %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Total_Bill_Run_Rate__c</fullName>
        <formula>Current_Year_Direct_Billings_Run_Rate__c  +  Current_Year_POS_Run_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Year Total Bill Run Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Total_Bill_YTD__c</fullName>
        <formula>Current_Year_Direct_Bill_YTD__c  +  Current_Year_POS_Bill_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Year Total Bill YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year_YTD_Appl_Focus_Billings__c</fullName>
        <label>Plan Year YTD Appl Focus Billings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <description>the Plan Year</description>
        <label>Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                    <default>true</default>
                    <label>2018</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_GI_Bill_from_Opportunity__c</fullName>
        <description>populated by report API</description>
        <inlineHelpText>calculates a potential revenue from Growth and Invest parts out of opportunities won in previous fiscal year and Engineering opp with a PLM ID (assumption is we win them)</inlineHelpText>
        <label>Potential GI Bill from Opportunity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_NPS3_from_Opportunity__c</fullName>
        <description>the field is populate via report API</description>
        <inlineHelpText>shows the incremental NPS3 growth forecast from won opportunities. (won in previous year, incremental means FC last year - FC Current Year because assumption is that Forecast last year is already in the billings of last year)</inlineHelpText>
        <label>Potential NPS3 from Opportunity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Repeat_NPS3__c</fullName>
        <description>field populated by report API</description>
        <inlineHelpText>potential repeat NPS3 business for plan year based on last year revenue and  parts which count for NPS3 in plan year</inlineHelpText>
        <label>Potential Repeat NPS3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_1_POS_Result__c</fullName>
        <description>POS results of  Previous Year -1</description>
        <label>Prev Year -1 POS Result</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_1_Total_Result__c</fullName>
        <formula>Prev_Year_1__c +  Prev_Year_1_POS_Result__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year -1 Total Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_1__c</fullName>
        <description>Direct Billing result of the previous year -1</description>
        <label>Prev Year -1 Direct Bill Result</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_53_weeks_result__c</fullName>
        <description>calculates the Previous Year revenue from a 52 weeks value in a 53 weeks value. Required for SIP in years with 53 weeks</description>
        <formula>Total_Revenue_Baseline__c / 52  * 53</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year 53 weeks result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Appl_Focus_Billings__c</fullName>
        <label>Prev Year Appl Focus Billings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Conversion_YTD_Result_Dollar__c</fullName>
        <description>shows the result of conversion from previous year (plan year -1)</description>
        <label>Prev Year Conversion YTD / Result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Conversion_YTD_Result__c</fullName>
        <formula>Prev_Year_Conversion_YTD_Result_Dollar__c  /  Total_Revenue_Baseline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year Conversion YTD /Result %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Dir_Bill_Run_Rate_Result__c</fullName>
        <formula>IF( 
VALUE(Current_Fiscal_Year_Direct__c) &gt;= Value(TEXT( Plan_Year__c )), 
Prev_Year_YTD_Direct_billings__c ,
( Prev_Year_YTD_Direct_billings__c /  Load_Status_Direct_Billings__c * 260)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year Dir Bill Run Rate / Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Dir_Bill_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the direct billing number year to date.</description>
        <label>Prev Year Dir Bill YTD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_GI_Bill_YTD__c</fullName>
        <label>Prev Year GI Bill YTD $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_GI_Result_Dollar__c</fullName>
        <inlineHelpText>Revenue with Grow &amp; Invest products in previous year</inlineHelpText>
        <label>Prev Year GI Result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_GI_Result__c</fullName>
        <formula>Prev_Year_GI_Result_Dollar__c  /  Total_Revenue_Baseline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GI revenue as % of total revenue</inlineHelpText>
        <label>Prev Year GI Result %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Gross_Margin__c</fullName>
        <label>Prev Year Gross Margin</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Growth__c</fullName>
        <formula>IF(Prev_Year_1_Total_Result__c = 0,0,( Total_Revenue_Baseline__c   /  Prev_Year_1_Total_Result__c ) -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year Growth</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prev_Year_NPS3_Result_Percent__c</fullName>
        <description>shows the previous year NPS result as % of total sales</description>
        <formula>Prev_Year_NPS3_Result__c  /  (Prev_Year_YTD_Direct_billings__c  +  Prev_Year_YTD_POS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>previous year NPS result as % of total sales</inlineHelpText>
        <label>Prev Year NPS3 Result %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prev_Year_NPS3_Result__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the NPS3 Revenue results  for Previous Year based on fixed Market dates</description>
        <inlineHelpText>Previous Year NPS3  results in $</inlineHelpText>
        <label>Prev Year NPS3 Result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_POS_Bill_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prev Year POS Bill YTD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_POS_Run_Rate_Result__c</fullName>
        <formula>IF(
VALUE(Current_Fiscal_Year_Indirect__c)   &gt;=  VALUE(TEXT( Plan_Year__c )),
 Prev_Year_YTD_POS__c   ,
( Prev_Year_YTD_POS__c  /  Load_Status_POS__c  * 260)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year POS Run Rate / Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Pipeline_YTD_Result_Dollar__c</fullName>
        <description>shows the result of previous year pipeline (plan year -1)</description>
        <label>Prev Year Pipeline YTD / Result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Pipeline_YTD_Result__c</fullName>
        <formula>Prev_Year_Pipeline_YTD_Result_Dollar__c  /  Total_Revenue_Baseline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year Pipeline YTD / Result %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Restated_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the pior year margin based on plan year cost.</description>
        <inlineHelpText>Prior Year Margin (restated) based on Prior year Billings and  Plan year Cost.  Baseline for SMI target</inlineHelpText>
        <label>Prev Year Restated Margin %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Standard_Margin_Dollar__c</fullName>
        <label>Prev Year Standard Margin $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Standard_Margin_YTD__c</fullName>
        <label>Prev Year Standard Margin YTD $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Standard_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the Standard Margin</description>
        <inlineHelpText>Previous Year Standard Margin of Direct Revenue (POS and CMA excluded)</inlineHelpText>
        <label>Prev Year Standard Margin %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prev_Year_Total_Bill_YTD__c</fullName>
        <formula>Prev_Year_Dir_Bill_YTD__c  +  Prev_Year_POS_Bill_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year Total Bill YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_YTD_Appl_Focus_Billings__c</fullName>
        <label>Prev Year YTD Appl Focus Billings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_YTD_Direct_billings__c</fullName>
        <defaultValue>0</defaultValue>
        <description>the year to date Direct Billings of Previous year ( Plan year -1)</description>
        <label>Prev Year YTD Direct billings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>